--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,11 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="/javascripts/jquery.min.js" ></script>
+    <script src="/javascripts/underscore-min.js" ></script>
+    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script src="/javascripts/gmaps.js" ></script>
+    <script src="/javascripts/location.js" ></script>
   </head>
   <body>
     <h1><%= title %></h1>
