--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Bootstrap 101 Template</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src="/javascripts/jquery.min.js" ></script>
-    <script src="/javascripts/underscore-min.js" ></script>
-    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-    <script src="/javascripts/gmaps.js" ></script>
-    <script src="/javascripts/location.js" ></script>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
+<% layout('layout') -%>
+<h1>Hello, world!</h1>
+<script src="http://code.jquery.com/jquery.js"></script>
+<script src="js/bootstrap.min.js"></script>
