--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,7 +1,7 @@
 body
   padding: 50px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
-  padding-top: 40px
+  adding-top: 40px
   padding-bottom: 40px
   background-color: #f5f5f5
 
@@ -32,3 +32,12 @@ a
   margin-bottom: 15px;
   padding: 7px 9px;
 
+.popin
+  background:#fff;
+  padding:15px;
+  box-shadow: 0 0 20px #999;
+  border-radius:2px;
+
+#map, #panorama
+  height:300px;
+  background:#6699cc;
