--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,9 +24,13 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.js"></script>
+    <script src="js/gmaps.js" ></script>
+    <script src="js/location.js" ></script>
+    <script src="js/hug.js" ></script>
+    <script src="js/underscore-min.js" ></script>
 
   </body>
 </html>
