--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -41,3 +41,12 @@ a
 #map, #panorama
   height:300px;
   background:#6699cc;
+
+
+#map label
+  width: auto;
+  display:inline;
+
+#map img
+  max-height: none;
+  max-width: none;
