--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,5 +6,7 @@
   <label class="checkbox">
     <input type="checkbox" value="remember-me"> Remember me
   </label>
-  <button class="btn btn-large btn-primary" type="submit">Sign in</button>
+  <a href="/auth/facebook" class="btn btn-large btn-primary" type="submit">
+    Sign in
+  </a>
 </form>
