--- a/views/hug.ejs
+++ b/views/hug.ejs
@@ -1,13 +1,12 @@
 <% layout('layout') -%>
 
 <form id="form-search-location" class="form-inline">
-  <label>Where are you?</label>
+  <label>Where are you? Be descriptive so the hug-giver can find you :)</label>
   <input type="text" id="address" name="address">
   <input type="submit" class="btn" value="Search">
   <input type="button" id="btn-locate-user" class="btn" value="Locate me!">
 </div>
 <form class="form-hug">
-
   <div class="popin">
     <div id="map"></div>
   </div>
