--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,8 @@
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel='stylesheet' href='/stylesheets/jquery.pnotify.default.css' />
+    <link rel='stylesheet' href='/stylesheets/jquery.pnotify.default.icons.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
 
     <!-- TODO(thm): Fav and touch icons -->
@@ -27,6 +29,7 @@
     <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.pnotify.min.js"></script>
     <script src="js/gmaps.js" ></script>
     <script src="js/location.js" ></script>
     <script src="js/hug.js" ></script>
