~ new view for index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,9 @@
 <% layout('layout') -%>
-<h1>Hello, world!</h1>
-<script src="http://code.jquery.com/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<div class="wrapper">
+<h1>Hug.me</h1>
+<h2>free hugs for the ones who need it!</h2>
+<form class="form-signin">
+  <h2 class="form-signin-heading">Please sign in using facebook</h2>
+  <a href="/auth/facebook"><img src="images/login_fb.png" width="154" height="22"></a>
+</form>
+</div>
