- remove generated files ~ change style

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -9,8 +9,8 @@ a
   color: #00B7FF
 
 .form-signin
-  max-width: 300px
-  padding: 19px 29px 29px
+  max-width: 400px
+  padding: 20px;
   margin: 0 auto 20px
   background-color: #fff
   border: 1px solid #e5e5e5
@@ -23,7 +23,7 @@ a
 
 .form-signin .form-signin-heading,
 .form-signin .checkbox
-  margin-bottom: 10px
+  margin-bottom: 20px
 
 .form-signin input[type="text"],
 .form-signin input[type="password"]
@@ -42,7 +42,6 @@ a
   height:300px;
   background:#6699cc;
 
-
 #map label
   width: auto;
   display:inline;
@@ -50,3 +49,6 @@ a
 #map img
   max-height: none;
   max-width: none;
+
+.wrapper
+  text-align: center;
