--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,11 @@
 <% layout('layout') -%>
-<div class="wrapper">
-<h1>Hug.me</h1>
-<h2>free hugs for the ones who need it!</h2>
-<form class="form-signin">
-  <h2 class="form-signin-heading">Please sign in using facebook</h2>
-  <a href="/auth/facebook"><img src="images/login_fb.png" width="154" height="22"></a>
-</form>
+<!-- Start About -->
+<div class="row-fluid section" id="about" style="margin-top:-100px;">
+  <div class="container">
+
+    <div class="explain">
+      <h2>We're disrupting hugs</h2>
+      <p class="intro">The future of hugs. It's like Uber for hugs. </p>
+    </div>
+  </div>
 </div>
