--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Sign in &middot; Twitter Bootstrap</title>
+    <title>Hugs.Me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -10,30 +10,108 @@
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
-    <link rel='stylesheet' href='/stylesheets/jquery.pnotify.default.css' />
-    <link rel='stylesheet' href='/stylesheets/jquery.pnotify.default.icons.css' />
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="css/m-styles.min.css" rel="stylesheet">
+    <link href="css/m-forms.min.css" rel="stylesheet">
+    <link href="css/m-buttons.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
+    <link href="css/jquery.fancybox-1.3.4.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 
-    <!-- TODO(thm): Fav and touch icons -->
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Le fav and touch icons -->
+    <link rel="shortcut icon" href="ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
   </head>
 
-  <body>
+  <body id="home" data-spy="scroll" data-target=".navbar">
+    <!-- HEADER CONTAINER -->
 
-    <div class="container">
-      <%-body -%>
-    </div> <!-- /container -->
+    <!-- CONTENT -->
+    <div class="row header">
 
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.pnotify.min.js"></script>
-    <script src="js/gmaps.js" ></script>
-    <script src="js/location.js" ></script>
-    <script src="js/hug.js" ></script>
-    <script src="js/underscore-min.js" ></script>
+      <!-- NAV -->
+      <nav class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
 
+          <a class="btn btn-navbar m-btn blue" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+
+          <h1 class="brand">
+            <a href="index.html">
+              <h2> hug.me </h2>
+            </a>
+          </h1>
+
+          <div class="nav-collapse">
+            <ul class="nav pull-right">
+              <li><a href="/" class="anchorLink">Home</a></li>
+              <li><a href="/hug" class="anchorLink">Get Hug</a></li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+      </nav>
+    </div>
+
+
+    <!-- Start Callout -->
+    <div class="full callout">
+      <div class="container hidden-phone" id="map" style=""> </div>
+    </div>
+    <!-- End Callout -->
+
+
+    <%- body %>
   </body>
+
+
+  <!-- Le javascript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="js/jquery.js"></script>
+  <script src="js/jquery.mousewheel-3.0.4.pack.js"></script>
+  <script src="js/jquery.gmap.js"></script>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+  <script src="js/jquery.form.js"></script>
+  <script src="js/custom.js"></script>
+  <script src="js/jquery.isotope.min.js"></script>
+  <script src="js/bootstrap-scrollspy.js"></script>
+  <script src="js/anchor.js" type="text/javascript"></script>
+  <script src="js/bootstrap.js"></script>
+
+  <!-- MAP -->
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $("#map").gMap({ controls: false,
+        scrollwheel: false,
+      draggable: true,
+      markers: [{ latitude: 37.875781,
+        longitude: -122.258729,
+      icon: { image: "img/pin.png",
+        iconsize: [32, 47],
+      iconanchor: [32,47],
+      infowindowanchor: [12, 0] } }
+      ],
+      icon: { image: "img/pin.png",
+        iconsize: [26, 46],
+      iconanchor: [12, 46],
+      infowindowanchor: [12, 0] },
+      latitude: 37.875781,
+      longitude:  -122.258729,
+      zoom: 15, });
+    });
+  </script>
 </html>
