--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -53,6 +53,7 @@
             </a>
           </h1>
 
+          <%-blocks.picture%>
           <div class="nav-collapse">
             <ul class="nav pull-right">
               <li><a href="/" class="anchorLink">Home</a></li>
