--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -153,6 +153,8 @@ h2.explain{line-height:34px;}
 
 #map {height:450px; width:100%; margin-bottom:80px; position: relative; z-index:2000; }
 #mapl {height:500px; width:100%;  position: relative; z-index:2000; }
+#maph {height:450px; width:100%; margin-bottom:80px; position: relative; z-index:2000; }
+
 
 #form fieldset {padding:0; margin-top:40px; margin-bottom:100px;}
 #contact-form .field {padding:0 0 10px 0; }
@@ -168,6 +170,18 @@ h2.explain{line-height:34px;}
 #contact-form #alert {padding:0 20px;}
 #contact-form #alert ul {padding:10px 0 0 0;}
 #contact-form #alert ul li {line-height:18px;}
+
+/*ROUND FACES */
+.circular {
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  }
 
 
 /*ABOUT*/
