~ update new UI

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Hugs.Me</title>
+    <title>Hug.Me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -57,7 +57,7 @@
           <div class="nav-collapse">
             <ul class="nav pull-right">
               <li><a href="/" class="anchorLink">Home</a></li>
-              <li><a href="/hug" class="anchorLink">Get Hug</a></li>
+              <li><a href="#myModal" onclick="$('#myModal').modal('show') +" class="anchorLink">Request A Hug</a></li>
             </ul>
           </div>
 
