--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,41 @@
 <% layout('layout') -%>
+<!-- MODAL WINDOW WITH TEXT INPUT -->
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="z-index:5000;">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">Request a Hug </h3>
+  </div>
+  <div class="modal-body">
+    <p>
+    <form class="navbar-form pull-left">
+      <input type="text" class="span2" placeholder="Phone Number">
+      <button type="submit" class="btn">Submit</button>
+    </form>
+    </p>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+  </div>
+</div>
+
 <!-- Start About -->
 <div class="row-fluid section" id="about" style="margin-top:-100px;">
   <div class="container">
 
     <div class="explain">
       <h2>We're disrupting hugs</h2>
-      <p class="intro">The future of hugs. It's like Uber for hugs. </p>
+      <p class="intro">The future of hugs. It's like Uber for hugs. <br><br>
+      <a href="#myModal" role="button" class="btn" data-toggle="modal">Get a hug</a>
+      </p>
     </div>
   </div>
 </div>
+
+<div class="row-fluid section" id="about" style="margin-top:-100px;">
+  <div class="container">
+    <div class="explain">
+      <h2>12 Hugs Delivered Today!</h2>
+    </div>
+  </div>
+</div
+
