--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
 <div class="row-fluid section" id="about" style="margin-top:-100px;">
   <div class="container">
     <div class="explain">
-      <h2>12 Hugs Delivered Today!</h2>
+      <h2><%= numHugs %> Hugs Delivered Today!</h2>
     </div>
   </div>
 </div
