--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -97,22 +97,24 @@
   <script type="text/javascript">
     $(document).ready(function(){
       $("#map").gMap({ controls: false,
-        scrollwheel: false,
-      draggable: true,
-      markers: [{ latitude: 37.875781,
-        longitude: -122.258729,
-      icon: { image: "img/pin.png",
-        iconsize: [32, 47],
-      iconanchor: [32,47],
-      infowindowanchor: [12, 0] } }
-      ],
-      icon: { image: "img/pin.png",
-        iconsize: [26, 46],
-      iconanchor: [12, 46],
-      infowindowanchor: [12, 0] },
-      latitude: 37.875781,
-      longitude:  -122.258729,
-      zoom: 15, });
+                       scrollwheel: false,
+                       draggable: true,
+                       markers: [{ latitude: 37.875781,
+                                   longitude: -122.258729,
+                                   icon: { image: "img/pin.png",
+                                           iconsize: [32, 47],
+                                           iconanchor: [32,47],
+                                           infowindowanchor: [12, 0] } }
+                                ],
+                       icon: { image: "img/pin.png",
+                               iconsize: [26, 46],
+                               iconanchor: [12, 46],
+                               infowindowanchor: [12, 0] },
+                       latitude: 37.875781,
+                       longitude:  -122.258729,
+                       zoom: 15
+                     });
     });
+
   </script>
 </html>
