--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,8 @@
   </div>
   <div class="modal-body">
     <p>
-    <form class="navbar-form pull-left">
-      <input type="text" class="span2" placeholder="Phone Number">
+    <form class="navbar-form pull-left" method='POST' action="/requestHug">
+      <input type="tel" class="span2" name="phoneNumber" placeholder="Phone Number">
       <button type="submit" class="btn">Submit</button>
     </form>
     </p>
