--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -57,7 +57,7 @@
           <div class="nav-collapse">
             <ul class="nav pull-right">
               <li><a href="/" class="anchorLink">Home</a></li>
-              <li><a href="#myModal" onclick="$('#myModal').modal('show') +" class="anchorLink">Request A Hug</a></li>
+              <li><a href="#myModal" onclick="$('#myModal').modal('show')" class="anchorLink">Request A Hug</a></li>
             </ul>
           </div>
 
