--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,20 @@
   </div>
 </div>
 
+<!-- MODAL WINDOW WITH TEXT INPUT -->
+<div id="successModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="z-index:5000;">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">SUCCESS</h3>
+  </div>
+  <div class="modal-body">
+    <p>A hug is on the way!</p>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+  </div>
+</div>
+
 <!-- Start About -->
 <div class="row-fluid section" id="about" style="margin-top:-100px;">
   <div class="container">
